--- a/src/index.html
+++ b/src/index.html
@@ -19,16 +19,16 @@
         Give wings to your creative mind with your journey through our
         magnificent world of visual art
       </p>
-      <form id="search">
+      <form action="">
         <input type="text" id="search-box" placeholder="Enter the Art House....">
-        <button>Search</button>  
+        <button id="search">Search</button>  
       </form>
     </div>
   </div>
-  
-
     <div id="main"></div>
-
+    <div>
+      <button id="show-more">Show more</button>
+    </div>
     <script type="module" src="js/index.js"></script>
   </body>
 </html>
